# pbsv2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  azure-pipelines.yml  cron  docker_repo_name  generate_erd.sh  gunicorn.conf.py  mypy.ini  pre_startup.sh  pyproject.toml  python-cron  requirements.txt  setup.cfg  startup.sh
.devcontainer/: Dockerfile  devcontainer.json
dockerdev/: Dockerfile
docs/: server.md
govapp/: __init__.py  asgi.py  checks.py  commands.py  context_processors.py  helpers.py  middleware.py  permissions.py  settings.py  test_functional.py  urls.py  views.py  wsgi.py
govapp/apps/: __init__.py
govapp/apps/accounts/: __init__.py  admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
govapp/apps/accounts/migrations/: 0001_initial.py
govapp/apps/actions/: admin.py  apps.py  models.py
govapp/apps/actions/migrations/: 0001_initial.py  0002_actionresponsibility_action_responsibility.py  0003_remove_action_responsibility_action_responsibility.py  0004_delete_action_delete_actionresponsibility.py  0005_initial.py  0006_alter_actionresponsibility_options.py
govapp/apps/approval/: apps.py  models.py
govapp/apps/aviation/: admin.py  apps.py  models.py  urls.py
govapp/apps/aviation/migrations/: 0001_initial.py  0002_aviationrequest_status_changed_and_more.py  0003_remove_aviationrequest_duration.py  0004_aviationrequest_duration.py  0005_alter_aviationrequest_duration.py  0006_aviationrequest_decision_files.py  0007_remove_aviationrequest_decision_files.py  (+6 more)
govapp/apps/burnplanning/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
govapp/apps/emails/: __init__.py  apps.py  emails.py
govapp/apps/implementation/: urls.py
govapp/apps/legalapproval/: admin.py  apps.py  models.py
govapp/apps/logs/: __init__.py  admin.py  apps.py  mixins.py  models.py  serializers.py  urls.py  utils.py  views.py
govapp/apps/main/: admin.py  apps.py  mixins.py  models.py  serializer.py  serializers.py  urls.py  views.py
govapp/apps/messaging/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
govapp/apps/operationalarea/: admin.py  apps.py  models.py
govapp/apps/operationalplanning/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
govapp/apps/prescriptiondetails/: admin.py  apps.py  models.py
govapp/apps/risk/: admin.py  apps.py  models.py
govapp/apps/swagger/: __init__.py  apps.py  urls.py
govapp/apps/traffic/: admin.py  apps.py  models.py
govapp/apps/treatment/: urls.py
govapp/apps/users/: admin.py  apps.py  models.py
govapp/common/: __init__.py  azure.py  local_storage.py  mixins.py  utils.py  views.py
govapp/frontend/pbs/: .babelrc  .eslintrc  .gitignore  README.md  index.html  jsconfig.json  package-lock.json  package.json  vue.config.js
govapp/static/pbsv2_vue/: index.html
govapp/templates/govapp/: assignable.html  aviation.html  base.html  burn-planning.html  dashboard.html  home.html  implementation.html  index.html  management_commands.html  operational-planning.html  profile.html  search.html  treatment.html
govapp/templates/registration/: login.html
govapp/templatetags/: users.py  utils.py
(+346 files in other folders)
